--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t bilal/simple-react -f Dockerfile.dev .
+  - docker build -t bilal/simple-react .
 
 script:
   - docker run -e CI=true bilal/simple-react npm run test -- --coverage
