--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   web:
     build: 
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports: 
-      - '80:3000'
+      - '80:80'
     volumes:
       - /app/node_modules
       - .:/app
