--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ before_install:
 script:
   - docker run -e CI=true bilal/simple-react npm run test -- --coverage
 
+after_success:
+  - docker build -t bilal/simple-react .
+
 deploy:
   provider: elasticbeanstalk
   region: "ap-northeast-1"
