--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: "ap-northeast-1"
-  app: "docker_react"
-  env: "Dockerreact-env"
+  app: "docker_react_compose"
+  env: "Dockerreactcompose-env"
   bucket_name: "elasticbeanstalk-ap-northeast-1-106951656790"
-  bucket_path: "docker_react"
+  bucket_path: "docker_react_compose"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
